[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Levels/LevelScreen.gd" type="Script" id=1]
[ext_resource path="res://src/Levels/Level3.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Levels/Level2.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Levels/Level1.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Levels/Level4.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Levels/Level7.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Levels/Level8.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Levels/Level5.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Levels/Level6.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="LevelScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
level1 = ExtResource( 4 )
level2 = ExtResource( 3 )
level3 = ExtResource( 2 )
level4 = ExtResource( 5 )
level5 = ExtResource( 8 )
level6 = ExtResource( 9 )
level7 = ExtResource( 6 )
level8 = ExtResource( 7 )
TitleScreen = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = 354.0
margin_top = 31.0
margin_right = 432.0
margin_bottom = 76.0
rect_scale = Vector2( 3.23419, 3 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_y = 1
text = "LEVELS
"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 1" type="Button" parent="."]
margin_left = 250.0
margin_top = 150.0
margin_right = 310.0
margin_bottom = 210.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 2" type="Button" parent="."]
margin_left = 350.0
margin_top = 150.0
margin_right = 410.0
margin_bottom = 210.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 0
text = "2"

[node name="Level 3" type="Button" parent="."]
margin_left = 450.0
margin_top = 150.0
margin_right = 482.0
margin_bottom = 211.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 0
text = "3"

[node name="Level 4" type="Button" parent="."]
margin_left = 550.0
margin_top = 150.0
margin_right = 610.0
margin_bottom = 210.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 0
text = "4"

[node name="Level 5" type="Button" parent="."]
margin_left = 250.0
margin_top = 250.0
margin_right = 310.0
margin_bottom = 310.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 0
text = "5"

[node name="Level 6" type="Button" parent="."]
margin_left = 350.0
margin_top = 250.0
margin_right = 410.0
margin_bottom = 310.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 0
text = "6"

[node name="Level 7" type="Button" parent="."]
margin_left = 450.0
margin_top = 250.0
margin_right = 510.0
margin_bottom = 310.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 0
text = "7"

[node name="Level 8" type="Button" parent="."]
margin_left = 550.0
margin_top = 250.0
margin_right = 610.0
margin_bottom = 310.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 0
text = "8"

[node name="Back" type="Button" parent="."]
margin_left = 400.0
margin_top = 400.0
margin_right = 500.0
margin_bottom = 460.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 0
text = "BACK"

[node name="Fade In" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade In"]
anims/fade_in = SubResource( 1 )
[connection signal="pressed" from="Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="Level 2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="Level 3" to="." method="_on_Level_3_pressed"]
[connection signal="pressed" from="Level 4" to="." method="_on_Level_4_pressed"]
[connection signal="pressed" from="Level 5" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="Level 6" to="." method="_on_Level_6_pressed"]
[connection signal="pressed" from="Level 7" to="." method="_on_Level_7_pressed"]
[connection signal="pressed" from="Level 8" to="." method="_on_Level_8_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
